# WHY2-Desktop

./: README  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs  main.rs  network.rs  ui.rs
src/components/: ConnectForm.tsx  InputBar.tsx  LogDisplay.tsx  ModalPrompt.tsx  ServerView.tsx
