[package]
name = "why2-desktop"
version = "0.1.0"
description = "Lightweight, fast, secure, and easy to use chat application."
authors = ["Václav Šmejkal <engo@satan.red>"]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://git.satan.red/ENGO150/WHY2-Desktop"
keywords = ["encryption", "chat", "security", "rust"]
categories = ["cryptography", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "why2_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
why2 = { version = "1.4.1", features = ["client"] }
